--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,15 +5,101 @@
     <title>Blog Home Page</title>
     <th:block th:include="~{layouts/main.html}"></th:block>
 </head>
-<body>
 <style>
+    body, html {
+        height: 100%;
+        margin: 0;
+    }
+
+    html {
+        font-size: 16px;
+    }
+
+
+    body {
+        font-family: "Century Gothic", cursive;
+        font-size: 1rem;
+        background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+
+    p{
+        color: white;
+        font-family: "Century Gothic", cursive;
+        font-size: 17px;
+    }
+
+
+    h2 {
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
+        text-align: center;
+        line-height: 1;
+        color: #c6e2ff;
+        animation: neon .08s ease-in-out infinite alternate;
+        padding-bottom: 10px;
+    }
+
+    .date{
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        line-height: 1;
+        color: #c6e2ff;
+        animation: neon .08s ease-in-out infinite alternate;
+        padding-bottom: 10px;
+
+    }
+
+
+    @keyframes neon {
+        from {
+            text-shadow:
+                    0 0 6px rgba(202,228,225,0.92),
+                    0 0 30px rgba(202,228,225,0.34),
+                    0 0 12px rgba(192,192,192,0.52),
+                    0 0 21px rgba(192,192,192,0.92),
+                    0 0 34px rgba(192,192,192,0.78),
+                    0 0 54px rgba(192,192,192,0.92);
+        }
+        to {
+            text-shadow:
+                    0 0 6px rgba(202,228,225,0.98),
+                    0 0 30px rgba(202,228,225,0.42),
+                    0 0 12px rgba(192,192,192,0.58),
+                    0 0 22px rgba(192,192,192,0.84),
+                    0 0 38px rgba(192,192,192,0.88),
+                    0 0 60px rgba(192,192,192,1);
+        }
+    }
+
+    section{
+        color: white;
+        font-family: "Century Gothic", cursive;
+        font-size: 17px;
+    }
+
+
+
+
+
     .frame{
         width: 91%;
         padding-left: 120px;
     }
 
-</style>
 
+</style>
+<body>
+
+<div class="bg">
 <div class="frame">
 
 <div layout:fragment="content">
@@ -24,7 +110,7 @@
    <div th:if="!${#lists.isEmpty(post)}">
     <h2>About Me</h2>
     <div class="row">
-        <div class="col-md-12">
+        <div class="sign">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl libero, molestie vitae orci nec, luctus feugiat lorem. Maecenas eu massa non neque blandit tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse id consectetur enim, et cursus nisl. Ut volutpat tempor accumsan. Aliquam et libero id nunc consectetur consequat at eu nibh. Nam ut justo in sapien fermentum facilisis.</p>
             <p>Nullam sodales neque fringilla molestie facilisis. Morbi nisl neque, malesuada convallis felis vitae, pharetra maximus lorem. Fusce tincidunt sapien pretium leo scelerisque, eget egestas nisi dapibus. Sed ut magna egestas, condimentum ex vel, tempor justo. Duis ut magna et orci tincidunt vestibulum. Suspendisse sed enim nec mi convallis aliquam. Sed id urna ultricies dolor dictum vulputate. Nulla porta auctor sagittis.</p>
         </div>
@@ -33,7 +119,7 @@
     <article>
         <header>
             <h2 th:text="${post.title}">title</h2>
-            <p th:text="${#calendars.format(post.postedOn, 'M/dd/yyyy hh:mm:ss a')}">postedOn</p>
+            <p class="date" th:text="${#calendars.format(post.postedOn, 'M/dd/yyyy hh:mm:ss a')}">postedOn</p>
         </header>
         <section th:text="${post.teaser}">
             teaser
@@ -49,6 +135,6 @@
     </div>
    </div>
 </div>
-
+</div>
 </body>
 </html>
