--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -1,27 +1,60 @@
 <!DOCTYPE html>
-<html lang="en"
-	  xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
-	  xmlns:layout="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
+<!--	  xmlns="http://www.w3.org/1999/xhtml"-->
+<!--	   xmlns:sec="http://www.w3.org/1999/xhtml"-->
+<!--	  xmlns:layout="http://www.w3.org/1999/xhtml">-->
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Blog Main Layout</title>
 	
-	<link rel="stylesheet" href="../static/css/blog.css" th:href="@{/css/blog.css}"/>
+    <link rel="stylesheet" href="../static/css/blog.css" th:href="@{/css/blog.css}"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-		
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />	
+
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css' />
-	
+
 	<!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
+<style>
+	.container-fluid{
+		background-color: black;
+		background-size: cover;
+		margin-left: auto;
+		margin-right: auto;
+		border-top: solid 1px rgba(255,255,255,.5);
+		border-radius: 5px;
+		box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+
+	}
+
+	a{
+		color: #828282;
+		text-decoration: none;
+
+
+
+	}
+	a:hover,
+	a:focus{
+		color: #c6e2ff;
+		text-shadow: 0 0 2px rgba(202, 228, 225, 0.92),
+		0 0 10px rgba(202, 228, 225, 0.34),
+		0 0 4px rgba(30, 132, 242, 0.52),
+		0 0 7px rgba(30, 132, 242, 0.92),
+		0 0 11px rgba(30, 132, 242, 0.78),
+		0 0 16px rgba(30, 132, 242, 0.92);
+	}
+
+
+</style>
 
 <body>
+
 
 	<div class="container">
   		 
