--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -8,9 +8,89 @@
 </head>
 
 <style>
+	body, html {
+		height: 100%;
+		margin: 0;
+	}
+
+	html {
+		font-size: 16px;
+	}
+
+
+	body {
+		font-family: "Century Gothic", cursive;
+		font-size: 1rem;
+		background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+
+	}
+
+	p{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
+
+
+	h2 {
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-size: 1.5rem;
+		text-align: center;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 10px;
+	}
+
+	.date{
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 10px;
+
+	}
+
+
+	@keyframes neon {
+		from {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.92),
+					0 0 30px rgba(202,228,225,0.34),
+					0 0 12px rgba(192,192,192,0.52),
+					0 0 21px rgba(192,192,192,0.92),
+					0 0 34px rgba(192,192,192,0.78),
+					0 0 54px rgba(192,192,192,0.92);
+		}
+		to {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.98),
+					0 0 30px rgba(202,228,225,0.42),
+					0 0 12px rgba(192,192,192,0.58),
+					0 0 22px rgba(192,192,192,0.84),
+					0 0 38px rgba(192,192,192,0.88),
+					0 0 60px rgba(192,192,192,1);
+		}
+	}
+
+	section{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
 	.frame{
 		width: 91%;
 		padding-left: 120px;
+
 	}
 
 </style>
@@ -21,7 +101,7 @@
 	    <article th:each="post : ${posts}">
 			<header>
 				<h2 th:text="${post.title}">title</h2>
-				<p th:text="${#calendars.format(post.postedOn,'M/dd/yyyy hh:mm:ss a')}">postedOn</p>
+				<p class="date" th:text="${#calendars.format(post.postedOn,'M/dd/yyyy hh:mm:ss a')}">postedOn</p>
 			</header>
 			<section th:utext="${post.teaser}">
 				teaser
