--- a/src/main/resources/templates/author/list.html
+++ b/src/main/resources/templates/author/list.html
@@ -41,6 +41,11 @@
 		font-size: 17px;
 	}
 
+	tr:nth-child(even) {
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
 
 	h2 {
 		min-height: 100%;
@@ -56,16 +61,7 @@
 		padding-bottom: 10px;
 	}
 
-	.date{
-		min-height: 100%;
-		display: flex;
-		flex-direction: column;
-		line-height: 1;
-		color: #c6e2ff;
-		animation: neon .08s ease-in-out infinite alternate;
-		padding-bottom: 10px;
 
-	}
 
 
 	@keyframes neon {
