--- a/src/main/resources/templates/admin/post/postForm.html
+++ b/src/main/resources/templates/admin/post/postForm.html
@@ -3,12 +3,107 @@
 	  xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Create New Post</title>
 	<th:block th:include="~{layouts/main.html}"></th:block>
 </head>
-<body>
+
 <style>
-	.frame{
+
+	/*body, html {*/
+	/*	height: 100%;*/
+	/*	min-height: 100%;*/
+	/*	margin: 0;*/
+	/*}*/
+
+	html {
+		font-size: 16px;
+	}
+
+
+	body {
+		font-family: "Century Gothic", cursive;
+		font-size: 1rem;
+		background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+
+	}
+
+	p{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
+
+
+	h2 {
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-size: 1.5rem;
+		text-align: center;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 20px;
+	}
+
+
+
+	@keyframes neon {
+		from {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.92),
+					0 0 30px rgba(202,228,225,0.34),
+					0 0 12px rgba(192,192,192,0.52),
+					0 0 21px rgba(192,192,192,0.92),
+					0 0 34px rgba(192,192,192,0.78),
+					0 0 54px rgba(192,192,192,0.92);
+		}
+		to {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.98),
+					0 0 30px rgba(202,228,225,0.42),
+					0 0 12px rgba(192,192,192,0.58),
+					0 0 22px rgba(192,192,192,0.84),
+					0 0 38px rgba(192,192,192,0.88),
+					0 0 60px rgba(192,192,192,1);
+		}
+	}
+
+	section{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
+
+	input#postedOn.form-control{
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 10px;
+	}
+
+	label.col-sm-2.control-label{
+		/*min-height: 100%;*/
+		/*display: flex;*/
+		/*flex-direction: column;*/
+		/*line-height: 1;*/
+		color: white;
+		animation: neon .08s ease-in-out infinite alternate;
+		/*padding-bottom: 10px;*/
+	}
+
+	input.form-control{
+		color: white;
+	}
+
+	.form-horizontal{
 		width: 91%;
 		padding-left: 0px;
 	}
@@ -23,14 +118,8 @@
 	}
 
 </style>
-
+<body>
 <h2>Create New Post</h2>
-<br/>
-
-<div class="frame">
-<div layout:fragment="content">
-
-
 
 	<form class="form-horizontal" th:object="${post}" th:action="@{/admin/post/save}" method="post">
 		<input type="hidden" th:field="*{id}" />
@@ -97,11 +186,6 @@
 		</div>
 		<button type="submit" class="btn btn-primary pull-right">Submit</button>
 	</form>
-
-	<br/><br/><br/>
-
-</div>
-</div>
 
 </body>
 </html>
