css changes part 4

--- a/src/main/resources/templates/post/view.html
+++ b/src/main/resources/templates/post/view.html
@@ -7,9 +7,118 @@
 	<title th:text="|View Post - ${post.title}|">View Post</title>
 </head>
 <style>
+
+	html {
+		font-size: 16px;
+	}
+
+
+	body {
+		font-family: "Century Gothic", cursive;
+		font-size: 1rem;
+		background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+
+	}
+
+	p{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
+
+
+
+	h2 {
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-size: 1.5rem;
+		text-align: center;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 10px;
+	}
+
+	.date{
+		min-height: 100%;
+		display: flex;
+		flex-direction: column;
+		line-height: 1;
+		color: #c6e2ff;
+		animation: neon .08s ease-in-out infinite alternate;
+		padding-bottom: 10px;
+
+	}
+	.activeT {
+		--interval: 1s;
+		display: block;
+		text-shadow:
+				0 0 10px var(--color1),
+				0 0 20px var(--color2),
+				0 0 40px var(--color3),
+				0 0 80px var(--color4);
+		will-change: filter, color;
+		filter: saturate(60%);
+		animation: flicker steps(100) var(--interval) 1s infinite;
+	}
+
+
+
+	.activeT {
+		color: tomato;
+		--color1: orangered;
+		--color2: firebrick;
+		--color3: maroon;
+		--color4: darkred;
+		font-family: serif;
+	}
+
+
+	@keyframes flicker {
+		50% {
+			color: white;
+			filter: saturate(200%) hue-rotate(20deg);
+		}
+	}
+
+	@keyframes neon {
+		from {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.92),
+					0 0 30px rgba(202,228,225,0.34),
+					0 0 12px rgba(192,192,192,0.52),
+					0 0 21px rgba(192,192,192,0.92),
+					0 0 34px rgba(192,192,192,0.78),
+					0 0 54px rgba(192,192,192,0.92);
+		}
+		to {
+			text-shadow:
+					0 0 6px rgba(202,228,225,0.98),
+					0 0 30px rgba(202,228,225,0.42),
+					0 0 12px rgba(192,192,192,0.58),
+					0 0 22px rgba(192,192,192,0.84),
+					0 0 38px rgba(192,192,192,0.88),
+					0 0 60px rgba(192,192,192,1);
+		}
+	}
+
+	section{
+		color: white;
+		font-family: "Century Gothic", cursive;
+		font-size: 17px;
+	}
 	.frame{
 		width: 91%;
 		padding-left: 120px;
+	}
+	ol.breadcrumb{
+		background: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
 	}
 
 </style>
@@ -20,13 +129,13 @@
 		<ol class="breadcrumb">
 			<li><a th:href="@{/home}">Home</a></li>
 			<li><a th:href="@{/posts/list}">Posts</a></li>
-			<li class="active" th:text="${post.title}"></li>
+			<li class="activeT" th:text="${post.title}"></li>
 		</ol>
 	
 	    <article>
 			<header>
 				<h2 th:text="${post.title}">title</h2>
-				<p th:text="${#calendars.format(post.postedOn,'M/dd/yyyy hh:mm a')}">postedOn</p>
+				<p class="date" th:text="${#calendars.format(post.postedOn,'M/dd/yyyy hh:mm a')}">postedOn</p>
 			</header>
 			<section th:utext="${post.body}">
 				body
@@ -40,80 +149,80 @@
 		</article>
 
 
-		<div >
+<!--		<div >-->
 
-			<div class="row"><h2 class="col-md-12 bold text-center">Comments:</h2></div>
-
-
-			<div  class="row">
-				<form  th:object="${post.comments}" th:action="|/posts/view/${post.slug}|" th:method="POST">
-					<input class="col-md-6 margintop30" placeholder="Comment" name="comment" />
-<!--					<input type="text" class="form-control" />-->
-					<div class="col-md-1">
-						<button class="btn btn-primary margintop30" type="submit">Comment</button>
-					</div>
-				</form>
-			</div>
+<!--			<div class="row"><h2 class="col-md-12 bold text-center">Comments:</h2></div>-->
 
 
-			<div th:if="${post.comments}" th:each="com : ${post.comments}">
-
-				<div class="row">
-					<div class="grooveBorder">
-
-
-						<div class="col-md-4"><a class="user-name-comments" th:href="@{/} + ${com.user.username}" th:text="${com.user.username}"></a></div>
-
-						<div class="col-md-6"><b>Date Commented : <span th:text="${com.date}"></span></b></div>
-
-						<div class="row">
-							<div class="col-md-7 show-white-spaces" th:text="${com.comment}"></div>
-
-							<div th:if="${com.user}" class="col-md-1">
-								<button class="reply btn btn-info">Reply</button>
-							</div>
-
-						</div>
-					</div>
-
-					<!-- Reply form -->
-					<div th:if="${com.user}" class="row">
-						<div class="reply-comment">
+<!--			<div  class="row">-->
+<!--				<form  th:object="${post.comments}" th:action="|/posts/view/${post.slug}|" th:method="POST">-->
+<!--					<input class="col-md-6 margintop30" placeholder="Comment" name="comment" />-->
+<!--&lt;!&ndash;					<input type="text" class="form-control" />&ndash;&gt;-->
+<!--					<div class="col-md-1">-->
+<!--						<button class="btn btn-primary margintop30" type="submit">Comment</button>-->
+<!--					</div>-->
+<!--				</form>-->
+<!--			</div>-->
 
 
-							<form method="post">
-								<textarea class="col-md-6 margintop30" placeholder="Reply" name="reply"></textarea>
-								<input type="hidden" th:value="${com.id}" name="commentForReply"/>
-								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-								<div class="col-md-1">
-									<button class="btn btn-primary margintop30" type="submit">Reply</button>
-								</div>
-							</form>
+<!--			<div th:if="${post.comments}" th:each="com : ${post.comments}">-->
 
-						</div>
-					</div>
-
-					<!-- Replies of current comment -->
-					<div th:if="${com.replies}">
-						<div class="row" th:each="reply : ${com.replies}">
+<!--				<div class="row">-->
+<!--					<div class="grooveBorder">-->
 
 
+<!--						<div class="col-md-4"><a class="user-name-comments" th:href="@{/} + ${com.user.username}" th:text="${com.user.username}"></a></div>-->
 
-								<div class="col-md-4"><a class="user-name-comments" th:href="@{/} + ${reply.author.userUrl}" th:text="${reply.user.username}"></a></div>
+<!--						<div class="col-md-6"><b>Date Commented : <span th:text="${com.date}"></span></b></div>-->
 
-								<div class="col-md-4"><b>Date Commented : <span th:text="${reply.date}"></span></b></div>
+<!--						<div class="row">-->
+<!--							<div class="col-md-7 show-white-spaces" th:text="${com.comment}"></div>-->
 
-								<div class="row">
-									<div class="col-md-8 show-white-spaces" th:text="${reply.reply}">></div>
-								</div>
-							</div>
-						</div>
-					</div>
+<!--							<div th:if="${com.user}" class="col-md-1">-->
+<!--								<button class="reply btn btn-info">Reply</button>-->
+<!--							</div>-->
 
-				</div>
-			</div>
+<!--						</div>-->
+<!--					</div>-->
 
-		</div>
+<!--					&lt;!&ndash; Reply form &ndash;&gt;-->
+<!--					<div th:if="${com.user}" class="row">-->
+<!--						<div class="reply-comment">-->
+
+
+<!--							<form method="post">-->
+<!--								<textarea class="col-md-6 margintop30" placeholder="Reply" name="reply"></textarea>-->
+<!--								<input type="hidden" th:value="${com.id}" name="commentForReply"/>-->
+<!--								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+<!--								<div class="col-md-1">-->
+<!--									<button class="btn btn-primary margintop30" type="submit">Reply</button>-->
+<!--								</div>-->
+<!--							</form>-->
+
+<!--						</div>-->
+<!--					</div>-->
+
+<!--					&lt;!&ndash; Replies of current comment &ndash;&gt;-->
+<!--					<div th:if="${com.replies}">-->
+<!--						<div class="row" th:each="reply : ${com.replies}">-->
+
+
+
+<!--								<div class="col-md-4"><a class="user-name-comments" th:href="@{/} + ${reply.author.userUrl}" th:text="${reply.user.username}"></a></div>-->
+
+<!--								<div class="col-md-4"><b>Date Commented : <span th:text="${reply.date}"></span></b></div>-->
+
+<!--								<div class="row">-->
+<!--									<div class="col-md-8 show-white-spaces" th:text="${reply.reply}">></div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+
+<!--				</div>-->
+<!--			</div>-->
+
+<!--		</div>-->
 
 
 		</div>
