login and register changes

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,9 +9,9 @@
     body {
         background:
                 linear-gradient(
-                        rgba(246,247,249,0.5),
-                        rgba(246,247,249,0.5)),
-                url(https://i.pinimg.com/originals/78/e7/2a/78e72a0dd8bc889c7231114e1d6f4ba0.jpg) no-repeat center center fixed;
+                        rgba(0, 0, 0,0.5),
+                        rgba(0, 0, 0,0.5)),
+                url(https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1) no-repeat center center fixed;
         background-size: cover;
     }
 
@@ -26,9 +26,9 @@
         width: 430px;
         background:
                 linear-gradient(
-                        rgba(35,43,85,0.75),
-                        rgba(35,43,85,0.95)),
-                url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Clouds-cloudy-forest-mountain_%2824325592605%29.jpg/800px-Clouds-cloudy-forest-mountain_%2824325592605%29.jpg) no-repeat center center;
+                        rgba(61, 61, 41,0.75),
+                        rgba(61, 61, 41,0.95)),
+                url(https://images.creativemarket.com/0.1.0/ps/1217934/300/200/m2/fpc/wm0/u7rs5hr66cscf586oeqbtjvgkln4ogrdq5kn4rwjsgxpeysh5ams0hpjyj8k63vm-.jpg?1461788152&s=1ed2c5e14c884a42f61fcf7a5870a66a) no-repeat center center;
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
