--- a/src/main/resources/templates/admin/post/view.html
+++ b/src/main/resources/templates/admin/post/view.html
@@ -114,11 +114,9 @@
 		font-size: 17px;
 	}
 	.back{
-		color: burlywood;
+		color: darkred;
 		text-decoration: none;
-
-
-
+		font-size: 25px;
 	}
 	.back:hover,
 	.back:focus{
@@ -130,7 +128,7 @@
 		0 0 11px rgba(30, 132, 242, 0.78),
 		0 0 16px rgba(30, 132, 242, 0.92);
 	}
-	
+
 
 
 </style>
