--- a/src/main/resources/templates/admin/post/postForm.html
+++ b/src/main/resources/templates/admin/post/postForm.html
@@ -138,7 +138,7 @@
 		border-radius: 20px;
 		background-color: dimgray;
 		cursor: pointer;
-		margin-left: 60px;
+		margin-left: 0;
 		display: block;
 	}
 
@@ -209,7 +209,8 @@
 				<span th:if="${#fields.hasErrors('body')}" th:errors="*{body}" th:class="help-block">Body Errors</span>
 			</div>
 		</div>
-		<button type="submit" class="btn btn-primary pull-right">Submit</button>
+
+		<button type="submit" class="btn btn-primary center-block">Submit</button>
 	</form>
 
 </body>
