--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -8,14 +8,14 @@
 <main class="mt-3">
     <h1 class="text-center text-dark">Edit Profile</h1>
     <hr class="hr-2 bg-dark w-25">
-    <form class="form w-25 mx-auto" th:action="@{/users/edit}" method="patch"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
+    <form class="form w-25 mx-auto" th:action="@{/users/edit}" method="post"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
         <div class="form-group">
             <label for="username" class="font-weight-bold">Username</label>
             <input type="text" th:value="${model.username}" class="form-control" name="username" id="username" readonly>
         </div>
         <div class="form-group">
             <label for="oldPassword" class="font-weight-bold">Old Password</label>
-            <input type="password" class="form-control" id="oldPassword" placeholder="Password..." name="oldPassword" required="">
+            <input type="password" class="form-control" id="oldPassword" placeholder="Password..." name="oldPassword" required>
         </div>
         <div class="form-group">
             <label for="Password" class="font-weight-bold">New Password</label>
