--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -2,9 +2,57 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <th:block th:include="~{layouts/main.html}"></th:block>
     <title>Title</title>
 </head>
 <body>
+<style>
+    .frame{
+        width: 91%;
+        padding-left: 120px;
+    }
+
+
+    html {
+        font-size: 16px;
+    }
+
+
+    body {
+        font-family: "Century Gothic", cursive;
+        font-size: 1rem;
+        background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+    }
+
+    .text-center.text-dark{
+        --interval: 1s;
+        display: block;
+        text-shadow:
+                0 0 10px var(--color1),
+                0 0 20px var(--color2),
+                0 0 40px var(--color3),
+                0 0 80px var(--color4);
+        will-change: filter, color;
+        filter: saturate(60%);
+        animation: flicker steps(100) var(--interval) 1s infinite;
+    }
+
+
+
+    .text-center.text-dark {
+        color: tomato;
+        --color1: orangered;
+        --color2: firebrick;
+        --color3: maroon;
+        --color4: darkred;
+        font-family: serif;
+    }
+</style>
+<div class="frame">
 <main class="mt-3">
     <h1 class="text-center text-dark">All Users</h1>
     <hr class="hr-2 bg-dark w-75">
@@ -28,23 +76,20 @@
                 <td class="col-md-3 text-center">
 
                     <div class="row">
-<!--                        <th:block th:if="${#lists.contains(user.authorities, 'ROLE_USER')} && !${#lists.contains(user.authorities, 'ROLE_ADMIN')}">-->
-<!--                            <form th:action="/users/set-admin/" method="post" class="mx-1"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">-->
-<!--                                <button class="btn btn-dark">ADMIN</button>-->
-<!--                            </form>-->
-<!--                        </th:block>-->
-                        <th:block sec:authorize="hasRole('ROLE_ADMIN')" >
-                            <form th:action="@{/users/set-admin/{id}(id=${user.id})}" method="post" class="mx-1"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
+                        <th:block th:if="${#lists.contains(user.authorities, 'ROLE_USER') &&
+                                !#lists.contains(user.authorities, 'ROLE_ADMIN')
+                        }">
+                        <form th:action="@{/users/set-admin/{id}(id=${user.id})}" method="post" class="mx-1"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
+                            <button class="btn btn-dark">ADMIN</button>
+                        </form>
+                        </th:block>
+                        <th:block th:if="${#lists.contains(user.authorities, 'ROLE_USER') &&
+                                #lists.contains(user.authorities, 'ROLE_ADMIN') && !#lists.contains(user.authorities, 'ROLE_ROOT')
+                        }">
+                            <form th:action="@{/users/set-user/{id}(id=${user.id})}" method="post" class="mx-1"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
                                 <button class="btn btn-dark">USER</button>
                             </form>
                         </th:block>
-
-                        <th:block sec:authorize="!hasRole('ROLE_ADMIN')" >
-                            <form th:action="@{/users/set-admin/{id}(id=${user.id})}" method="post" class="mx-1"><input type="hidden" name="_csrf" value="80417983-fe8b-45c7-963e-31f6915a1560">
-                                <button class="btn btn-dark">ADMIN</button>
-                            </form>
-                        </th:block>
-
                     </div>
 
                 </td>
@@ -56,6 +101,6 @@
     </table>
     <hr class="hr-2 bg-dark">
 </main>
-
+</div>
 </body>
 </html>
