--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,7 +103,19 @@
 
 <div layout:fragment="content">
     <div th:if="${#lists.isEmpty(post)}">
-        <span>hi</span>
+        <h2>About Me</h2>
+        <div class="row">
+            <div class="sign">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl libero, molestie vitae orci nec, luctus feugiat lorem. Maecenas eu massa non neque blandit tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse id consectetur enim, et cursus nisl. Ut volutpat tempor accumsan. Aliquam et libero id nunc consectetur consequat at eu nibh. Nam ut justo in sapien fermentum facilisis.</p>
+                <p>Nullam sodales neque fringilla molestie facilisis. Morbi nisl neque, malesuada convallis felis vitae, pharetra maximus lorem. Fusce tincidunt sapien pretium leo scelerisque, eget egestas nisi dapibus. Sed ut magna egestas, condimentum ex vel, tempor justo. Duis ut magna et orci tincidunt vestibulum. Suspendisse sed enim nec mi convallis aliquam. Sed id urna ultricies dolor dictum vulputate. Nulla porta auctor sagittis.</p>
+            </div>
+        </div>
+
+        <div>
+            <p>
+            <div class="alert alert-warning" role="alert">No Posts Found.</div>
+            </p>
+        </div>
     </div>
 
    <div th:if="!${#lists.isEmpty(post)}">
