--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
+	  xmlns:layout="http://www.w3.org/1999/xhtml">
 <!--	  xmlns="http://www.w3.org/1999/xhtml"-->
 <!--	   xmlns:sec="http://www.w3.org/1999/xhtml"-->
 <!--	  xmlns:layout="http://www.w3.org/1999/xhtml">-->
@@ -10,7 +11,7 @@
 	<title>Coffe Thoughts Blog</title>
 
 
-	
+
     <link rel="stylesheet" href="../static/css/blog.css" th:href="@{/css/blog.css}"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 
@@ -18,11 +19,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css' />
 
 	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
 <style>
+
 	.container-fluid{
 		background-color: black;
 		background-size: cover;
@@ -33,7 +35,16 @@
 		box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
 
 	}
+	@media (min-width: 768px) {
+		.navbar-nav > li > a {
+			padding-bottom: 19px !important;
+		}
+	}
 
+	.logoutBar{
+		margin: 0;
+		padding: 0;
+	}
 	.wName {
 		text-decoration: none;
 		color: #828282;
@@ -106,55 +117,58 @@
 <body>
 
 
-	<div class="container">
-  		 
-		<nav class="navbar navbar-default">
-		    <div class="container-fluid">
-		        <div class="navbar-header">
-		            <a class="navbar-brand" th:href="@{/home}">COFFEE THOUGHTS</a>
-		        </div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				    <ul class="nav navbar-nav">
-				        <li class="" th:class="${controllerName == 'Home'} ? 'dropdown active' : 'dropdown'"><a th:href="@{/home}">Home</a></li>
-				        <li class="dropdown" th:class="${controllerName == 'Post'} ? 'dropdown active' : 'dropdown'">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Posts <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a href="/posts/list">List</a></li>
-				            </ul>
-				        </li>
-				        <li class="dropdown" th:class="${controllerName == 'Author'} ? 'dropdown active' : 'dropdown'">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Authors <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a th:href="@{/authors/list}">List</a></li>
-				            </ul>
-				        </li>
-						<li class="dropdown" th:class="${controllerName== 'AdminPost'} ? 'dropdown active' : 'dropdown'" sec:authorize="hasRole('ROLE_ADMIN')">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
-				            <ul class="dropdown-menu">
-				                <li><a th:href="@{/admin/posts/}">Posts</a></li>
-				                <li><a th:href="@{/admin/authors/}">Authors</a></li>
-				            </ul>
-				        </li>					        
-				    </ul>
-				    <div class="navbar-text navbar-right">
-			            Welcome <span class="wName" sec:authentication="name">Guest</span> |
-				    	<form sec:authorize="isAuthenticated()" id="frmlogout" th:action="@{/users/logout}"  class="form-inline">
-				    		<a href="javascript:{}" onclick="document.getElementById('frmlogout').submit(); return false;">Logout</a>
-				    	</form>
-				    	<a sec:authorize="!isAuthenticated()" th:href="@{/users/login}" th:method="post" class="form-inline" > Login</a>
-						<span>|</span>
-						<a sec:authorize="!isAuthenticated()" th:href="@{/users/register}" th:method="post" class="form-inline"> Register</a>
-				    </div>
+<div class="container">
+
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" th:href="@{/home}">COFFEE THOUGHTS</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="" th:class="${controllerName == 'Home'} ? 'dropdown active' : 'dropdown'"><a th:href="@{/home}">Home</a></li>
+					<li sec:authorize="isAuthenticated()" th:class="${controllerName == 'Profile'} ? 'dropdown active' : 'dropdown'"><a th:href="@{/users/profile}" >Profile</a></li>
+					<li class="dropdown" th:class="${controllerName == 'Post'} ? 'dropdown active' : 'dropdown'">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Posts <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="/posts/list">List</a></li>
+						</ul>
+					</li>
+					<li class="dropdown" th:class="${controllerName == 'Author'} ? 'dropdown active' : 'dropdown'">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Authors <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a th:href="@{/authors/list}">List</a></li>
+						</ul>
+					</li>
+					<li class="dropdown" th:class="${controllerName== 'AdminPost'} ? 'dropdown active' : 'dropdown'" sec:authorize="hasRole('ROLE_ADMIN')">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a th:href="@{/admin/posts/}">Posts</a></li>
+							<li><a th:href="@{/admin/authors/}">Authors</a></li>
+						</ul>
+					</li>
+				</ul>
+				<div class="navbar-text navbar-right">
+					<p class="logoutBar">
+						Welcome <span class="wName" sec:authentication="name">Guest</span> |
+<!--					<form sec:authorize="isAuthenticated()" id="frmlogout" th:action="@{/users/logout}"  style="display:inline-block; margin:0; padding:0; box-sizing:border-box">-->
+						<a sec:authorize="isAuthenticated()" th:href="@{/users/logout}">Logout</a>
+<!--					</form>-->
+<!--						onclick="document.getElementById('frmlogout').submit(); return false;"-->
+					<a sec:authorize="!isAuthenticated()" th:href="@{/users/login}" th:method="post" class="form-inline" > Login</a>
+					<span>|</span>
+					<a sec:authorize="!isAuthenticated()" th:href="@{/users/register}" th:method="post" class="form-inline"> Register</a>
+					</p>
 				</div>
-		    </div>
-		</nav>
-		
-		<div layout:fragment="content">
+			</div>
 		</div>
-	
+	</nav>
+	<div layout:fragment="content">
 	</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" ></script>
 </body>
 </html>
