--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -145,6 +145,7 @@
 						<ul class="dropdown-menu">
 							<li><a th:href="@{/admin/posts/}">Posts</a></li>
 							<li><a th:href="@{/admin/authors/}">Authors</a></li>
+							<li><a th:href="@{/users/all/}">All Users</a></li>
 						</ul>
 					</li>
 				</ul>
