--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -22,9 +22,6 @@
         font-family: "Century Gothic", cursive;
         font-size: 1rem;
         background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
 
     }
 
@@ -41,7 +38,15 @@
         animation: flicker steps(100) var(--interval) 1s infinite;
     }
 
-
+    tr{
+        color: white;
+    }
+    td{
+        color: white;
+    }
+    button.btn.btn-dark{
+        color: black;
+    }
 
     .text-center.text-dark {
         color: tomato;
@@ -56,7 +61,7 @@
 <main class="mt-3">
     <h1 class="text-center text-dark">All Users</h1>
     <hr class="hr-2 bg-dark w-75">
-    <table class="table table-hover w-75 mx-auto">
+    <table class="table w-75 mx-auto">
         <thead>
         <tr class="row mx-auto">
             <th class="col-md-2 text-center">#</th>
