--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -144,7 +144,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a th:href="@{/admin/posts/}">Posts</a></li>
-							<li><a th:href="@{/admin/authors/}">Authors</a></li>
+							<li><a th:href="@{/authors/list}">Authors</a></li>
 							<li><a th:href="@{/users/all/}">All Users</a></li>
 						</ul>
 					</li>
